--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,3 +98,11 @@ header nav ul li a {
     color: var(--secondary-color);
     font-size: 18px;
 }
+
+.contact-info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+}
