--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,10 +99,23 @@ header nav ul li a {
     font-size: 18px;
 }
 
+.sections-contact {
+    margin: 50px auto;
+    padding-bottom: 50px;
+    width: 80%;
+    border-bottom: 1px solid var(--primary-color);
+}
+
 .contact-info {
     display: flex;
+    width: 100%;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     list-style: none;
 }
+
+.flex-container {
+    display: flex;
+}
+
