--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,28 +82,35 @@ header nav ul li a {
     display: inline;
     vertical-align: top;
     flex: 1 12%;
+    margin-top: 1.5vw;
 }
 
 .me-picture img {
-    max-width: 45%;
+    max-width: 200%;
 }
 
 .section-text {
     display: inline;
     margin-top: 20px;
     flex: 12;
+    margin-left: 20vw;
 }
 
 .section-text p {
     color: var(--secondary-color);
-    font-size: 18px;
+    font-size: 1.5vw;
 }
 
 .sections-contact {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid var(--primary-color);
+}
+
+.sections-contact h3 {
+    color: var(--secondary-color);
+    font-size: 46px;
+    flex: 1 30%;
 }
 
 .contact-info {
@@ -113,9 +120,81 @@ header nav ul li a {
     justify-content: space-evenly;
     align-items: center;
     list-style: none;
+    margin-top: 3vw;
+}
+
+.contact-info a {
+    color: var(--primary-color);
+    text-decoration: none;
+    font-size: 1.5vw;
 }
 
 .flex-container {
     display: flex;
 }
+
+.work-images {
+    display: flex;
+    max-width: 100vw;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.work-images img {
+    margin: 50px;
+}
+
+@media screen and (max-width: 980px) {
+    header {
+        padding-bottom: 0;
+        justify-content: center;
+        position: relative;
+    }
+
+    header h1 {
+        width: 100%;
+        text-align: center;
+    }
+
+    header nav ul {
+        margin-top: 20px;
+        width: 100%;
+        justify-content: center;
+    }
+
+    header nav ul li a {
+        font-size: 20px;
+    }
+
+    .me-picture img {
+        max-width: 100%;
+    }
+
+    .flex-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .section-text {
+        padding: 0, 0, 0, 0;
+    }
+
+    .section-text p {
+        display: flex;
+        align-items: center;
+        font-size: 2vw;
+    }
+
+    .work-images {
+        max-width: 50%;
+    }
+
+    .contact-info a {
+        display: flex;
+        flex-direction: column;
+        flex: wrap;
+        font-size: 4vw;
+    }
+}
+
 
